@@ -4,6 +4,8 @@ documents those changes that are of interest to users and admins.
 * Changes in SLURM 1.2.6
 ========================
  -- Fix MPIRUN_PORT env variable in mvapich plugin
+ -- Disable setting triggers by other than user SlurmUser unless SlurmUser
+    is root for improved security.
 
 * Changes in SLURM 1.2.5
 ========================
